--- a/numpy/numpy_1_intro.ipynb
+++ b/numpy/numpy_1_intro.ipynb
@@ -116,7 +116,7 @@
         "\n",
         "print(\"a1 = \", a1, \", type = \", type(a1)) # ndarray: n차원 배열"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -154,7 +154,7 @@
         "\n",
         "print(\"a2 = \", a2, \", type = \", type(a2))"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -201,7 +201,7 @@
         "\n",
         "print(\"a3 = \", a3, \", type = \", type(a3))"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -251,7 +251,7 @@
         "\n",
         "print(\"result = \", result, \", type = \", type(result)) # type numpy.float64: 64비트 실수"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -276,7 +276,7 @@
         "\n",
         "print(\"a4 = \", a4, \", type = \", type(a4))"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -323,7 +323,7 @@
         "# shape of numpy arrays\n",
         "a1.shape, a2.shape, a3.shape, a4.shape # () 소괄호: tuple 구조, 값이 하나일 경우 , 콤마로 마감"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -363,7 +363,7 @@
         "# dimension of numpy arrays\n",
         "a1.ndim, a2.ndim, a3.ndim, a4.ndim"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -401,7 +401,7 @@
         "# size of numpy arrays\n",
         "a1.size, a2.size, a3.size, a4.size"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -441,7 +441,7 @@
         "# dtype of numpy arrays\n",
         "a1.dtype, a2.dtype, a3.dtype, a4.dtype"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -483,7 +483,7 @@
         "print(a4r)\n",
         "a4r"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -518,7 +518,7 @@
       "source": [
         "a4r.shape, a4r.ndim, a4r.size, a4r.dtype"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -607,7 +607,7 @@
         "# A + B = (2 1)\n",
         "#         (1 2)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -618,7 +618,7 @@
       "source": [
         "import numpy as np # 라이브러리의 별명을 지정하는 방식을 사용"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -638,7 +638,7 @@
         "\n",
         "A + B   # 행렬 연산이 아닌 리스트 연산으로 리스트가 확장된다."
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -679,7 +679,7 @@
         "\n",
         "A + B  # 행렬 연산"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -708,7 +708,7 @@
         "print(A)\n",
         "print(B)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -789,7 +789,7 @@
         "# vector A, B 차원 출력 => ndim\n",
         "print(\"A.ndim = {0}, B.ndim = {1}\".format(A.ndim, B.ndim))"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -826,7 +826,7 @@
       "source": [
         "A.shape, B.shape  # , B는 항목(즉 요소)가 세개인 벡터"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -862,7 +862,7 @@
       "source": [
         "A"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -888,7 +888,7 @@
       "source": [
         "A[:, np.newaxis]   # 열벡터 (크기 n x 1 행렬, 2차원 구조)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -918,7 +918,7 @@
         "A1.shape #, A1.ndim \n",
         "# (3, 1): 3행 1열 2차원 구조"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -944,7 +944,7 @@
       "source": [
         "A1.shape, A1.ndim, A.ndim, A.shape"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -980,7 +980,7 @@
       "source": [
         "B"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1006,7 +1006,7 @@
       "source": [
         "B[np.newaxis,:]   # 행벡터 (크기 1 x n 행렬, 2차원 구조)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1033,7 +1033,7 @@
         "B1  = B[np.newaxis,:]\n",
         "B1.shape"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1060,7 +1060,7 @@
         "print(A,B)\n",
         "A1,B1             # [[]]: 2차원 구조"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1095,7 +1095,7 @@
       "source": [
         "A.shape, B.shape, A1.shape, B1.shape"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1126,7 +1126,7 @@
       "source": [
         "# A, B, A1, B1의 차원을 비교해보시오."
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1141,7 +1141,7 @@
       "source": [
         "A.ndim, B.ndim, A1.ndim, B1.ndim"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1188,7 +1188,7 @@
         "# reshape를 이용해서 벡터 A를 열벡터, 행벡터로 변환\n",
         "A.reshape(3,-1),A.reshape(-1,3)"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1242,15 +1242,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "Ii5wfLYz6zpD",
-        "outputId": "96d601bd-5171-47f8-bfef-73047f7c3e17",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "96d601bd-5171-47f8-bfef-73047f7c3e17"
       },
       "source": [
         "A,B"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1285,7 +1285,7 @@
         "print(\"A/B = \", A/B)\n",
         "print(\"A%B = \", A%B) # 나머지"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1306,7 +1306,7 @@
         "id": "8cKw303r79g2"
       },
       "source": [
-        "## => numpy 벡터는 요소별 5칙 연산이 된다."
+        "=> numpy 벡터는 요소별 5칙 연산이 된다."
       ]
     },
     {
@@ -1321,7 +1321,7 @@
       "source": [
         "B%A           # numpy output: 넘파이 배열 구조 (list, tuple 구조와 구별하기)"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1347,7 +1347,7 @@
       "source": [
         "A**B"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1405,10 +1405,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "wcx7fbWGdc9D",
-        "outputId": "16f5f3de-af87-4dec-c45b-7cc39375e27a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "16f5f3de-af87-4dec-c45b-7cc39375e27a"
       },
       "source": [
         "A = np.array([ [1,2,3], [4,5,6] ])\n",
@@ -1420,7 +1420,7 @@
         "# vector A, B 차원 출력 => ndim\n",
         "print(\"A.ndim = {0}, B.ndim = {1}\".format(A.ndim, B.ndim))"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1471,10 +1471,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "HWgzy1zqfTSb",
-        "outputId": "9d227cf2-b3a5-45f6-ab07-d02e8bea3de7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9d227cf2-b3a5-45f6-ab07-d02e8bea3de7"
       },
       "source": [
         "# reshape()를 이용한 열벡터 생성\n",
@@ -1494,7 +1494,7 @@
         "\n",
         "print(\"C2.shape = \", C2.shape)"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1511,15 +1511,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "90pFnM0W9n9x",
-        "outputId": "bd00d412-b8c2-4776-f8c9-7fa25809bd4c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "bd00d412-b8c2-4776-f8c9-7fa25809bd4c"
       },
       "source": [
         "C1, C2      # C1 열벡터, C2 행백터"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1539,15 +1539,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "b4naZbr5RIbe",
-        "outputId": "2c65ffdf-d7df-46b4-c980-e39c2d80852c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2c65ffdf-d7df-46b4-c980-e39c2d80852c"
       },
       "source": [
         "C1.ndim, C2.ndim"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1574,10 +1574,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "RXvGHEV5wBDe",
-        "outputId": "92a2d6e1-c894-4731-f300-ce3f413c9568",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "92a2d6e1-c894-4731-f300-ce3f413c9568"
       },
       "source": [
         "# reshape()를 이용한 구조 변경\n",
@@ -1596,7 +1596,7 @@
         "print(D)\n",
         "print(D1)"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1617,10 +1617,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "IUnhl44ERmPQ",
-        "outputId": "54efddbc-ea13-432c-aa1c-cc37503d2c50",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "54efddbc-ea13-432c-aa1c-cc37503d2c50"
       },
       "source": [
         "# 전치행렬과 비교 => reshape과 .T 다르다!\n",
@@ -1629,7 +1629,7 @@
         "print(D1) # reshape\n",
         "print(DT) # 전치행렬"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
