Colaboratory를 통해 생성됨

--- a/numpy/numpy_1_intro.ipynb
+++ b/numpy/numpy_1_intro.ipynb
@@ -1620,16 +1620,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "54efddbc-ea13-432c-aa1c-cc37503d2c50"
+        "outputId": "bc01d82b-3d9f-4fc6-ab3c-ed83fc9c2523"
       },
       "source": [
         "# 전치행렬과 비교 => reshape과 .T 다르다!\n",
         "DT = D.T     # 2x3 --> 3x2\n",
         "print(D)\n",
         "print(D1) # reshape\n",
-        "print(DT) # 전치행렬"
+        "print(DT) # transpose"
       ],
-      "execution_count": null,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
