Colaboratory를 통해 생성됨

--- a/numpy/numpy_2_array.ipynb
+++ b/numpy/numpy_2_array.ipynb
@@ -57,7 +57,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2a466652-d221-450e-975e-30406130a17b"
+        "outputId": "518ee8e5-7abe-419c-d36d-bad6d742ea18"
       },
       "source": [
         "from numpy import asarray\n",
@@ -70,7 +70,7 @@
         "# summarize the array shape\n",
         "print(data.shape)  # AttributeError: 'list' object has no attribute 'shape' (data list는 2차원, list는 shape객체가 없음, ) --> asarray 매개변수 넣어주기"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -98,9 +98,9 @@
         "id": "0rLupYCmDC1q",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 136
+          "height": 134
         },
-        "outputId": "0793dde9-426c-43a4-b66c-414fe61818eb"
+        "outputId": "267868c3-fa59-44a6-b318-9c36fb7b4d0e"
       },
       "source": [
         "# enumerate rows in a numpy array\n",
@@ -114,14 +114,14 @@
         "for row in range(data.shape[]): # SyntaxError: invalid syntax\n",
         "\tprint(data[])"
       ],
-      "execution_count": 3,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "error",
           "ename": "SyntaxError",
           "evalue": "ignored",
           "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-20036b1762c9>\"\u001b[0;36m, line \u001b[0;32m9\u001b[0m\n\u001b[0;31m    for row in range(data.shape[]):\u001b[0m\n\u001b[0m                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-0d9473c6b3d3>\"\u001b[0;36m, line \u001b[0;32m9\u001b[0m\n\u001b[0;31m    for row in range(data.shape[]): # SyntaxError: invalid syntax\u001b[0m\n\u001b[0m                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
           ]
         }
       ]
@@ -133,13 +133,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mD-kNmoGkG1K",
-        "outputId": "dd140ab4-b1d2-41a0-ff35-c2290706f80a"
+        "outputId": "8ea84d4e-a040-478f-fb81-9de9b6e1b5fe"
       },
       "source": [
         "for row in range(data.shape[0]): \n",
         "\tprint(data[row])"
       ],
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -158,7 +158,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "q8jmNed7kOsZ",
-        "outputId": "19118116-2d93-479b-89d7-217181767749"
+        "outputId": "d89e15a3-9506-437b-e15f-b4d7e885df6e"
       },
       "source": [
         "data.shape # tuple\n",
@@ -193,9 +193,9 @@
         "id": "2jS_7YIWDC1t",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 136
+          "height": 134
         },
-        "outputId": "96dea4bd-0f78-4681-8386-8ba7d9576079"
+        "outputId": "278e73b7-b909-4195-e296-45fb81e063ee"
       },
       "source": [
         "# enumerate rows in a numpy array\n",
@@ -216,7 +216,7 @@
           "ename": "SyntaxError",
           "evalue": "ignored",
           "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-84bdfea055ca>\"\u001b[0;36m, line \u001b[0;32m9\u001b[0m\n\u001b[0;31m    for col in range(data.shape[]):\u001b[0m\n\u001b[0m                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-68e4356f9ed4>\"\u001b[0;36m, line \u001b[0;32m9\u001b[0m\n\u001b[0;31m    for col in range(data.shape[]):  # SyntaxError: invalid syntax\u001b[0m\n\u001b[0m                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
           ]
         }
       ]
@@ -224,55 +224,25 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "rb2xuL8AlYCu",
-        "outputId": "f1833b3e-7d7a-4db7-f068-2d932bdb5656"
+        "id": "rb2xuL8AlYCu"
       },
       "source": [
         "data"
       ],
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[1, 2, 3],\n",
-              "       [4, 5, 6]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 13
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "bPBOzK-jktGR",
-        "outputId": "e4cb70d2-7812-4c8d-aa61-4fb8d50d6a8d"
+        "id": "bPBOzK-jktGR"
       },
       "source": [
         "for col in range(data.shape[1]): \n",
         "\tprint(data[:,col])"
       ],
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[1 4]\n",
-            "[2 5]\n",
-            "[3 6]\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -298,11 +268,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nFCQ6buxDC1v",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "9d368de6-2165-4ac0-edba-115aaea685d0"
+        "id": "nFCQ6buxDC1v"
       },
       "source": [
         "# sum values array-wise\n",
@@ -318,18 +284,8 @@
         "# summarize the result\n",
         "print(result)"
       ],
-      "execution_count": 18,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[[1 2 3]\n",
-            " [4 5 6]]\n",
-            "[ 6 15]\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -343,11 +299,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "irwyItrKDC10",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "61f2ea3f-8151-476f-fb0d-614f6777c48b"
+        "id": "irwyItrKDC10"
       },
       "source": [
         "# sum values column-wise\n",
@@ -364,17 +316,7 @@
         "print(result)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[[1 2 3]\n",
-            " [4 5 6]]\n",
-            "21\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -392,7 +334,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c33adea4-cea6-4942-faf4-a7b9691bf186"
+        "outputId": "800798ba-8a33-463a-f5b4-5acb9315fd49"
       },
       "source": [
         "# sum values row-wise\n",
@@ -408,7 +350,7 @@
         "# summarize the result\n",
         "print(result)"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -463,22 +405,25 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5a4a5ec1-e9fe-4500-de50-54ec0eb9ecbb"
+        "outputId": "f55355d9-2705-4e5a-ff70-95c6f91814c2"
       },
       "source": [
         "# Make 3d-array in numpy\n",
-        "data = [[1,2,3], [4,5,6]]\n",
+        "data = [[[1,2,3], [4,5,6],[7,8,9]]]\n",
+        "print(data)\n",
         "data = asarray(data)\n",
         "print(data)"
       ],
-      "execution_count": 20,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[1 2 3]\n",
-            " [4 5 6]]\n"
+            "[[[1, 2, 3], [4, 5, 6], [7, 8, 9]]]\n",
+            "[[[1 2 3]\n",
+            "  [4 5 6]\n",
+            "  [7 8 9]]]\n"
           ]
         }
       ]
@@ -486,13 +431,82 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "idjZZCwTDC2E"
+        "id": "VS3wBPAb2nd9"
       },
       "source": [
-        "# 3차원 리스트 만들고 asarray로 배열\n"
+        "d1 = data.reshape([1,3,3])"
       ],
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EXdLxjzX4bfV",
+        "outputId": "6980b249-3a4d-4a91-9ad9-525d2e3964e2"
+      },
+      "source": [
+        "d1,d1.ndim"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(array([[[1, 2, 3],\n",
+              "         [4, 5, 6],\n",
+              "         [7, 8, 9]]]), 3)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LbnrFqU55bfB"
+      },
+      "source": [
+        "d2 = data.reshape([3,1,3])"
+      ],
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yOiVIKw45i_E",
+        "outputId": "6207b1df-c365-4676-dffc-74d453aca629"
+      },
+      "source": [
+        "d2,d2.ndim"
+      ],
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(array([[[1, 2, 3]],\n",
+              " \n",
+              "        [[4, 5, 6]],\n",
+              " \n",
+              "        [[7, 8, 9]]]), 3)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
     }
   ]
 }
