Colaboratory를 통해 생성됨

--- a/numpy/numpy_2_array.ipynb
+++ b/numpy/numpy_2_array.ipynb
@@ -224,25 +224,56 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rb2xuL8AlYCu"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rb2xuL8AlYCu",
+        "outputId": "4abcc0e2-736e-47ab-f0f4-6d057931011b"
       },
       "source": [
         "data"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[[1, 2, 3],\n",
+              "        [4, 5, 6],\n",
+              "        [7, 8, 9]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 40
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bPBOzK-jktGR"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bPBOzK-jktGR",
+        "outputId": "a322c5c1-a2c5-4e8c-b2bc-b56b40a08dff"
       },
       "source": [
         "for col in range(data.shape[1]): \n",
         "\tprint(data[:,col])"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1 2 3]]\n",
+            "[[4 5 6]]\n",
+            "[[7 8 9]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -268,7 +299,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nFCQ6buxDC1v"
+        "id": "nFCQ6buxDC1v",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ae70d44e-eaf4-45ab-d405-0f0fb4b5b715"
       },
       "source": [
         "# sum values array-wise\n",
@@ -284,8 +319,18 @@
         "# summarize the result\n",
         "print(result)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1 2 3]\n",
+            " [4 5 6]]\n",
+            "[ 6 15]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -299,7 +344,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "irwyItrKDC10"
+        "id": "irwyItrKDC10",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "14f84c31-ba50-4b7b-8e97-48066582f147"
       },
       "source": [
         "# sum values column-wise\n",
@@ -315,8 +364,18 @@
         "# summarize the result\n",
         "print(result)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1 2 3]\n",
+            " [4 5 6]]\n",
+            "21\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -334,7 +393,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "800798ba-8a33-463a-f5b4-5acb9315fd49"
+        "outputId": "9fed9037-c82c-4989-cd46-8369d345d9a4"
       },
       "source": [
         "# sum values row-wise\n",
@@ -350,7 +409,7 @@
         "# summarize the result\n",
         "print(result)"
       ],
-      "execution_count": 8,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -405,7 +464,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f55355d9-2705-4e5a-ff70-95c6f91814c2"
+        "outputId": "c628bc9f-74d2-44ab-86bd-f5a1e8d7d604"
       },
       "source": [
         "# Make 3d-array in numpy\n",
@@ -414,7 +473,7 @@
         "data = asarray(data)\n",
         "print(data)"
       ],
-      "execution_count": 35,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
@@ -436,7 +495,7 @@
       "source": [
         "d1 = data.reshape([1,3,3])"
       ],
-      "execution_count": 36,
+      "execution_count": 46,
       "outputs": []
     },
     {
@@ -446,12 +505,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EXdLxjzX4bfV",
-        "outputId": "6980b249-3a4d-4a91-9ad9-525d2e3964e2"
+        "outputId": "9879663d-53fc-4c9b-cc8f-c9b70f9f5ab1"
       },
       "source": [
         "d1,d1.ndim"
       ],
-      "execution_count": 37,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -463,7 +522,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 37
+          "execution_count": 47
         }
       ]
     },
@@ -475,7 +534,7 @@
       "source": [
         "d2 = data.reshape([3,1,3])"
       ],
-      "execution_count": 38,
+      "execution_count": 48,
       "outputs": []
     },
     {
@@ -485,12 +544,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yOiVIKw45i_E",
-        "outputId": "6207b1df-c365-4676-dffc-74d453aca629"
+        "outputId": "ff306315-7410-4aad-f65c-beca439d0829"
       },
       "source": [
         "d2,d2.ndim"
       ],
-      "execution_count": 39,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -504,7 +563,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 39
+          "execution_count": 49
         }
       ]
     }
